# Lumos-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Lumos.sln  README.md  meson.build
Examples/: checkerboard.cpp  fixed_update.cpp  moving_rect.cpp  resource.cpp  window.cpp
Examples/Resources/: all_red_fragment_shader.glsl.cpp
Lumos/: Lumos.vcxproj  Lumos.vcxproj.filters  lumos.cpp  math.cpp  shapes.cpp
Lumos/src/: Lumos.h
Lumos/src/Lumos/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Lumos/src/Lumos/Core/: KeyCodes.h
Lumos/src/Lumos/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
Physics/: Box.cpp  Box.h  QuadTree.cpp  QuadTree.h
Rendering Engine/dependencies/glad/glad/: glad.h
Rendering Engine/src/: engine.hh
Sandbox/: Sandbox.vcxproj
Sandbox/src/: SandboxApp.cpp
Test/: primitive.cpp
assets/shaders/: frag.glsl  vert.glsl
examples/: Makefile  checkerboard.cpp  fixed_update.cpp  input.cpp  moving_rect.cpp  new_rect.cpp  primitive.cpp  sand_fall.cpp  sand_sim.cpp  sand_sim_copy.cpp  scratch.cpp  texture.cpp  window.cpp
examples/Resources/: FiraCode-Regular.ttf.cpp  all_red_fragment_shader.glsl  all_red_vertex_shader.glsl  all_red_vertex_shader.glsl.cpp  container.jpg.cpp
include/: animation.h  data.h  ecs.h  gl_stuff.h  input.h  lumos.h  shader.h  shapes.h  textures.h  window.h
src/: ecs.cpp  engine.cpp  engine.h  gl_stuff.cpp  glad.c  input.cpp  lumos.cpp  main.cpp  shader.cpp  shapes.cpp  textures.cpp  window.cpp
src/shaders/: fragment.glsl  vertex.glsl
